--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Fun to have done something new.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: iam_prasun
+github_username:  PrasunPK
 
 # Build settings
 markdown: kramdown
