--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,10 @@ github_username:  PrasunPK
 
 # Build settings
 markdown: kramdown
+gems:
+- jekyll-mentions
+- jemoji
+- jekyll-redirect-from
+- jekyll-sitemap
+
+- jekyll-feed
