--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ description: Alive Is Awesome
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: iam_prasun
+facebook_username: prasun.kumarpalchowdhury
 github_username:  PrasunPK
 
 # Build settings
