--- a/_data/comments.yml
+++ b/_data/comments.yml
@@ -1,4 +1,3 @@
 - author: someone
   date: 2016-02-09 09:56:50 +10:00
-  contents:
-    Quinn did not make a single good point unfortunately, merely repeated his dogma with his ears shut.
+  contents: Quinn did not make a single good point unfortunately, merely repeated his dogma with his ears shut.
