--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,31 @@
 # This is the default format.
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /:title
-# https://help.github.com/articles/migrating-your-pages-site-from-maruku
 markdown: kramdown
 
 # highlighter: pygments
 paginate: 20 # pagination based on number of posts
 paginate_path: "page/:num"
 
-# These paths are to the main pages Jekyll-Bootstrap ships with.
-# Some JB helpers refer to these paths; change them here if needed.
-#
 categories_path : categories.html
 tags_path : tags.html
 
 BASE_PATH : ""
 
-
 title : PrasunPK
 
-
-
 author:
-  name: Prasun Kumar Palchowdhury
-  role: Jekyll Theme
+  name: Prasun
+  role: Application Developer
   email: "--"
   github: prasunpk
   twitter: iam_prasun
   facebook: prasun.kumarpalchowdhury
   googleplus: +prasun
-  bio: "Simple, clean, responsive and stylist theme for jekyll. "
-  # uno-dbyll: https://raw.githubusercontent.com/talk2ankan/uno-dbyll/gh-pages/uno-dbyll.png
+  bio: "Simple thoughts to express ... "
+  avatar: avatar.png
+
+
 gems:
 - jekyll-mentions
 - jemoji
